--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -156,6 +156,16 @@ footer {
     outline: none;
 }
 
+.flash-message.message{
+    background-color: #3498db;
+}
+.flash-message.success {
+    background-color: #2ecc71;
+}
+.flash-message.error {
+    background-color: #e74c3c;
+}
+
 /* Stile per la tabella dei dispositivi */
 .device-table {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -201,19 +211,8 @@ footer {
     color: #333;
 }
 
-/* Stile per lo stato "on" */
-.status-on {
-    display: inline-block;
-    padding: 5px 10px;
-    background-color: #2ecc71;
-    color: white;
-    border-radius: 20px;
-    font-size: 0.8rem;
-    font-weight: 500;
-}
-
-/* Stile per il pulsante Modifica */
-.device-table button {
+/* Stile per i pulsanti delle tabelle */
+.table-button-container button {
     padding: 6px 12px;
     background-color: #3498db;
     color: white;
@@ -223,7 +222,42 @@ footer {
     font-size: 0.85rem;
     transition: background-color 0.2s ease;
 }
-
-.device-table button:hover {
+.table-button-container button:hover {
     background-color: #2980b9;
+    transform: translateY(-1px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+.table-button-container button:active {
+    background-color: #2980b9;
+    transform: translateY(2px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+/* Stile per i pulsanti di navigazione */
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+.button-container button {
+        background-color: #3498db;
+        color: white;
+        padding: 0.6rem 1.2rem;
+        margin-right: 0.8rem;
+        border: none;
+        border-radius: 6px;
+        font-size: 1rem;
+        font-weight: 500;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+.button-container button:hover {
+        background-color: #2980b9;
+        transform: translateY(-1px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+.button-container button:active {
+        background-color: #2980b9;
+        transform: translateY(2px);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
