--- a/app/templates/devices_management.html
+++ b/app/templates/devices_management.html
@@ -50,8 +50,12 @@
                         </td>
                         <td class="{{ device.status }}">{{ device.status }}</td>
                         <td>
-                            <button onclick="showHideChannels( '{{ device.id }}' )">Mostra</button>
-                            <a href="{{ url_for('devices.keyframes_management', device_id=device.id) }}">Mostra Keyframes</a>
+                            <div class="table-button-container">
+                            <button onclick="showHideChannels( '{{ device.id }}' )">Mostra<br>Dettagli</button>
+                            <a href="{{ url_for('devices.keyframes_management', device_id=device.id) }}">
+                                <button>Mostra<br>Keyframes</button>
+                            </a>
+                            </div>
                         </td>
                         
                     </tr>
@@ -103,11 +107,11 @@
             if (channelsRow.style.display === 'none' || channelsRow.style.visibility === 'hidden') {
                 channelsRow.style.display = 'table-row';
                 channelsRow.style.visibility = 'visible';
-                button.innerText = 'Nascondi';
+                button.innerText = 'Nascondi\nDettagli';
             } else {
                 channelsRow.style.display = 'none';
                 channelsRow.style.visibility = 'hidden';
-                button.innerText = 'Mostra';
+                button.innerText = 'Mostra\nDettagli';
             }
         }
         
