--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,9 +26,6 @@
                 <a href="{{ url_for('main.audio_management') }}" {% if request.endpoint == 'main.audio_management' %}class="current"{% endif %}>Gestione Musica</a>
             </li>
             <li>
-                <a href="{{ url_for('main.light_management') }}" {% if request.endpoint == 'main.light_management' %}class="current"{% endif %}>Gestione Luci</a>
-            </li>
-            <li>
                 <a href="{{ url_for('main.devices_management') }}" {% if request.endpoint == 'main.devices_management' %}class="current"{% endif %}>Gestione Dispositivi</a>
             </li>
             {% if current_user.is_authenticated %}
@@ -69,8 +66,9 @@
     {% endwith %}
 
 
-    <main>
-        {% block content %}{% endblock %}
+    <main class="base-main">
+        {% block content %}
+        {% endblock %}
     </main>
     <footer>
         {% block footer %}
