--- a/app/templates/auth/admin.html
+++ b/app/templates/auth/admin.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <p>Benvenuto {{ current_user.username }} </p>
+    <h2>Benvenuto {{ current_user.username }} </h2>
 
     <h2>Gestione Utenti</h2>
     <table>
